 * New config option.  java.mp4slit (default=true) to use Cahoon's java based MP4splitter vs old C-port of mp4 splitter
 * Added prelim support for 64-bit mp4's
 * Changed MP4 handling of avc1&avcC atom.  No longer assume avc1 is a container, but do assume avcC is located immediately after avc1 data
 
===V0.25===
 * Force transcoding of MP4's if profile > High or Level > 41 
 * Internal reorg--  Get icon for display from parsed file type (folder, video, dvd, etc)
 * Changed re-interleaving code to work based on DTS (decoding time stamp) rather than PTS (presentation time stamp)
 * pytivo-html.xsl supports image : tag with URL to image to use in metadata
 * Internal changes to possibly support another MP4 pseudo-streaming module
 * added config option hme.res to set hme resolution to use
 * Added Yoav's patches to add HD support
 * Force transcode if audio is not 44100k or 48000k
 * When transcoding force sample rate of 44100k or 48000k
 * Change default to HD
 * Change default xsl for pytivo metadata to HTML version

 ===V0.24===
 * Added stack trace printout to Listener when catching uncaught exceptions
 * disabled using ffmpeg to gather metadata.
  * new config: meta.vidinfo.disable=true  set to false to re-enable ffmpeg gathering of metadata
 * Added more exception handling to mp4 metadata parsing code
 
 
 ===V.023beta===
 * Attempt to fix ffmpeg crashes in av_close_input_file (function frees structure, but JNA attempts to read it back after call completes)
 * Change method of parsing title for pyTivo & tivo XML files
 * Fixed bug causing crashes if dir.x did not exit (in cache cleanup code)
 * Optimized & fixed bugs in mp4 metadata reading
 
 ===V0.22beta===
 * Changed default for quality.2channel to zero, effectively disabling it.  Newer ffmpeg doesn't like to do this for 5.1 aac -> 2 channel ac3
 * Added support for new ffmpeg, AVStream->sample_aspect_ratio 
 * Added 3gp, mov to supported extension