@@ -7,6 +7,9 @@
  * New config option.  java.mp4slit (default=true) to use Cahoon's java based MP4splitter vs old C-port of mp4 splitter
  * Added prelim support for 64-bit mp4's
  * Changed MP4 handling of avc1&avcC atom.  No longer assume avc1 is a container, but do assume avcC is located immediately after avc1 data
+ * Added code to mp4 parsing to skip extra data in container atoms (so if remaining size < min atom size, just skip)
+ * Changed hashing algorithm for cached previews (mostly so DVD VOB files don't conflict)  Should be backwards compatabile
+  * Still will be hash collision problem if for DVD VOB's in same directory.  Example if all dvd's are mounted in /mnt/iso/VIDEO_TS/XXXX.VOB
  
 ===V0.25===
  * Force transcoding of MP4's if profile > High or Level > 41 
